# ipie

./: .codecov.yml  .gitignore  .pylintrc  .travis.yml  MANIFEST.in  NOTICE  README.rst  pyproject.toml  pytest.ini  requirements.txt  setup.cfg  setup.py  todo.rst
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  ci2.yml  publish.yml
dev/: dev.txt  jax.txt  mpi.txt  requirements.txt  run_all.sh  run_tests.py  torch.txt
docs/: Makefile  requirements_rtd.txt
docs/source/: bibliography.rst  conf.py  index.rst  ipie.analysis.rst  ipie.estimators.rst  ipie.propagation.rst  ipie.qmc.rst  ipie.systems.rst  ipie.trial_wavefunction.rst  ipie.utils.rst  ipie.walkers.rst  modules.rst  pauxy.analysis.rst  pauxy.estimators.rst  (+14 more)
ipie/: __init__.py  _version.py  config.py  conftest.py
ipie/lib/libci/: .clang-format  BUILD  CMakeLists.txt  README.md  WORKSPACE  __init__.py  ci_lib.py  libci.py  obervables.py  test_ci_lib.py  test_libci.py
ipie/lib/libci/dev/: build_bazel.sh
ipie/lib/libci/src/: bitstring.cc  bitstring.h  bitstring.test.cc  cilib.pybind.cc  config.h  custom_types.cc  custom_types.h  custom_types.test.cc  determinant.cc  determinant.h  excitations.cc  excitations.h  excitations.test.cc  hamiltonian.cc  hamiltonian.h  hamiltonian.test.cc  observables.cc  observables.h  observables.test.cc  testing.cc  testing.h  wavefunction.cc  wavefunction.h  wavefunction.test.cc
ipie/lib/wicks/: BUILD  CMakeLists.txt  README.md  WORKSPACE  density_matrix.c  density_matrix.h  determinant_utils.c  determinant_utils.h  test_wicks_helper.py  wicks_helper.py
ipie/lib/wicks/src/: bitstring.cc  bitstring.h  bitstring.test.cc  ci_wavefunction.cc  ci_wavefunction.h  ci_wavefunction.test.cc  cilib.pybind.cc  config.h  excitations.cc  excitations.h  excitations.test.cc  observables.cc  observables.test.cc  wavefunction.cc  wavefunction.h
pauxy/: _version.py
pie/: __init__.py  _version.py
pyqumc/: _version.py
test_data/: README.rst  jobconfig  userconfig
timing_scripts/: afqmc_batch_timing.py  afqmc_timing.py  chunking_VHS.py  chunking_force_bias.py  chunking_local_energy.py  local_energy.py  local_energy_CPU.py  local_energy_GPU.py  local_energy_exx_CPU.py  local_energy_kernel.py  mpi_GPU.py  numba_benchmark.py  population_control.py  propagation.py  propagation_GPU.py  propagation_VHF_GPU.py  propagation_VHS.py  propagation_VHS_GPU.py  propagation_force_bias.py  propagation_force_bias_GPU.py  propagation_greens_function.py  unpack_GPU.py  wicks_overlap_kernels.py
tools/: add_license.py  convert_phase.py  extract_dice.py  extract_observable.py  extract_raw.py  fcidump_to_afqmc.py  finite_temp_analysis.py  mom_dist.py  reblock.py  reblock_nopyblock.py  run_examples.sh  simple.py
(+984 files in other folders)
